refactor: SendonMessageService 생성자 주입 및 불변 객체 적용 (#193)